Fixed offcentered event calendar, changes to navbar brand-image

--- a/server/app/static/site_media/css/app.css
+++ b/server/app/static/site_media/css/app.css
@@ -1,5 +1,5 @@
 body {
-	padding-top: 50px;
+	padding-top: 25px;
 	font-family: 'Lato', sans-serif;
 }
 
@@ -10,7 +10,7 @@ html {
 h1 {
 	text-align: center;
 	font-size: 60px;
-	padding: 50px 0;
+	padding-top: 25px;
 }
 
 h3 {
@@ -51,8 +51,7 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-bottom: 25px;
 }
 
 img .post-image {
@@ -88,7 +87,7 @@ select {
 		width: 200px;
 }
 
-iframe {
+.iframe-with-margin {
 	margin-left: 100px;
 }
 
@@ -157,18 +156,7 @@ hr {
   border-bottom: 1px solid black;
 }
 
-img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 40px;
-	padding-bottom: 40px;
-}
 
-img .post-image {
-	max-width: 600px;
-	height: 400px;
-}
 
 .section {
 		padding-top: 10px;
@@ -225,6 +213,8 @@ img .post-image {
  .sponsors {
 	 padding-top: 50px;
  }
+
+
 
  @media (min-width: 979px) {
                ul.nav li.dropdown:hover > ul.dropdown-menu {
